converted index to graphql, fixed instagram img stretch

--- a/src/style/pages/_av.scss
+++ b/src/style/pages/_av.scss
@@ -117,6 +117,7 @@
         height: 293px;
         width: 293px;
         border-radius: 7px;
+        object-fit: cover;
       }
       video {
         height: 293px;
